fix(accordion-web): collapse animation
- It's necessary to wait a little so that the browser
can settle with the newly set collapsing class.

--- a/packages/pluggableWidgets/accordion-web/src/ui/accordion-main.scss
+++ b/packages/pluggableWidgets/accordion-web/src/ui/accordion-main.scss
@@ -44,6 +44,12 @@ $header-color-hover: #264ae5;
         }
     }
 
+    &.widget-accordion-group-collapsing {
+        .widget-accordion-group-content-wrapper {
+            transition-delay: 50ms;
+        }
+    }
+
     .widget-accordion-group-header {
         padding: 16px;
         display: flex;
